[metadata]
name = pas-crud-engine
description = Python Application Services: CRUD based API model
long_description = "pas-crud-engine" provides a CRUD and REST like internal API.
platforms = any
author = direct Netware Group et al.
author_email = web@direct-netware.de
license = MPL2
url = https://www.direct-netware.de/redirect?pas;crud_engine
classifiers =
    Framework :: direct PAS
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
